--- a/aboutUs.html
+++ b/aboutUs.html
@@ -91,8 +91,8 @@
     <!-- =====================About Us start======================= -->
     <section class="py-5 my-5" style="background: #2D18170A;">
         <div class="container">
-            <div class="row g-lg-5 g-4">
-                <div class="col-xl-8 col-lg-7">
+            <div class="row  g-4">
+                <div class="col-xl-7 col-lg-6">
                     <div class="h-100 w-100 pe-lg-5 d-flex gap-2 justify-content-center align-items-start flex-column">
                         <h1 class="fw-normal fs-2 fm-forum text-dark">About <span style="color: #9CB31A;">Us</span></h1>
                         <p class="fw-normal fs-6 fm-lato text-dark">Hinges provides customers with a wide selection of
@@ -111,10 +111,12 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-5">
-                    <div class="w-100 rounded-3 overflow-hidden" style="height: 472px;">
-                        <img class="w-100 h-100" loading="lazy" src="assets/images/aboutUsimage.png"
-                            alt="Modern Living">
+                <div class="col-xl-5 col-lg-6">
+                     <div class="d-flex justify-content-lg-end justify-content-center w-100">
+                        <div class="w-100 rounded-3 overflow-hidden" style="height: 472px; max-width: 466px;">
+                            <img class="w-100 h-100" loading="lazy" src="assets/images/aboutUsimage.png"
+                                alt="Restful Retreat">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -126,13 +128,16 @@
     <!-- =====================Going Green start======================= -->
     <section class="py-5 mb-5" style="background: #2D18170A;">
         <div class="container">
-            <div class="row g-lg-5 g-4">
-                <div class="col-xl-4 col-lg-5">
-                    <div class="w-100 rounded-3 overflow-hidden" style="height: 472px;">
-                        <img class="w-100 h-100" loading="lazy" src="assets/images/goingGreen.png" alt="Modern Living">
+            <div class="row  g-4">
+                <div class="col-xl-5 col-lg-6">
+                    <div class="d-flex justify-content-lg-start justify-content-center w-100">
+                        <div class="w-100 rounded-3 overflow-hidden" style="height: 472px; max-width: 466px;">
+                            <img class="w-100 h-100" loading="lazy" src="assets/images/goingGreen.png"
+                                alt="Restful Retreat">
+                        </div>
                     </div>
                 </div>
-                <div class="col-xl-8 col-lg-7">
+                <div class="col-xl-7 col-lg-6">
                     <div class="h-100 w-100 ps-lg-5 d-flex gap-2 justify-content-center align-items-start flex-column">
                         <h1 class="fw-normal fs-2 fm-forum text-dark">Going <span style="color: #9CB31A;">Green</span>
                         </h1>
