--- a/becomeACustomer.html
+++ b/becomeACustomer.html
@@ -182,7 +182,7 @@
                             <input type="text" class="form-control h-64" placeholder="Enter Telephone Number">
                         </div>
                         <div class="col-lg-4 col-md-6 col-12">
-                            <label for="" class="mb-2">Fax <span class="text-danger">*</span></label>
+                            <label for="" class="mb-2">Fax </label>
                             <input type="text" class="form-control h-64" placeholder="Enter Fax">
                         </div>
                         <div class="col-lg-12 col-md-12 col-12">
@@ -234,7 +234,7 @@
                             <input type="checkbox">
                             <span class="checkmark me-2"></span>
                             <span style="margin-top: -1px;">
-                                I Agree to the <a class="text-primary" href="terms&Conditions.html">
+                                I agree to the <a class="text-primary" href="terms&Conditions.html">
                                     Terms of Service.
                                 </a>
                             </span>
