--- a/contactUs.html
+++ b/contactUs.html
@@ -80,8 +80,7 @@
         <div class="container">
             <div style="padding: 250px 0;">
                 <h1 class="display-2 fw-normal text-white fm-didact text-center">Contact Us</h1>
-                <p class="text-center fs-5 text-white fw-normal mt-3">We are committed to processing the information in
-                    order to contact you and talk about your project.</p>
+                <p class="text-center fs-5 text-white fw-normal mt-3">We are dedicated to using your information solely to connect with you and discuss the details of your project.</p>
             </div>
         </div>
     </section>
@@ -104,7 +103,7 @@
                                     Office: 11242 Indian Trail, Dallas, TX 75229</span>
                             </div>
                             <div class="d-flex align-items-start gap-3">
-                                <img style="height: 22px; width: 22px;" src="assets/images/mobile-chat.svg"
+                                <img style="height: 22px; width: 22px;" src="assets/images/call.svg"
                                     alt="Phone Icon">
                                 <span class="text-dark fs-20 fw-normal fm-lato"
                                     style="margin-top: -5px;">214-484-9664</span>
@@ -126,8 +125,8 @@
                             <input type="text" class="form-control h-64" placeholder="Subject" required>
                             <textarea class="form-control" rows="6" placeholder="Message" required
                                 style="resize: none;"></textarea>
-                            <button type="submit" class="btn bg-dark text-white fw-medium py-2"
-                                style="font-size: 18px;">Send</button>
+                            <button type="submit" class="btn  text-white fw-medium py-2"
+                                style="font-size: 18px; background: #2D1817;">Send</button>
                         </form>
                     </div>
                 </div>
