--- a/eventDetails.html
+++ b/eventDetails.html
@@ -85,7 +85,7 @@
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item "><a class="text-white fm-lato fs-12 fw-normal"
                                     href="events&Promotions.html">Event & Promotions</a></li>
-                            <li class="breadcrumb-item text-white fm-lato fs-12 fw-normal" aria-current="page">Library
+                            <li class="breadcrumb-item text-white fm-lato fs-12 fw-normal" aria-current="page">Event Details
                             </li>
                         </ol>
                     </nav>
@@ -123,25 +123,25 @@
                     <h1 class="fm-forum lh-base fw-normal fs-2  text-dark mb-3 mt-4 text-start">Event Gallery</h1>
                     <div class="row g-3">
                         <div class="col-lg-7 col-md-6 col-12">
-                            <div class="rounded-4 overflow-hidden" style="height: 345px;">
+                            <div class="rounded-lg-4 rounded-3 overflow-hidden image_hight_auto" style="height: 345px;">
                                 <img class="h-100 w-100" loading="lazy" src="assets/images/e-gallery1.png"
                                     alt="gallery1">
                             </div>
                         </div>
                         <div class="col-lg-5 col-md-6 col-12">
-                            <div class="rounded-4 overflow-hidden" style="height: 345px;">
+                            <div class="rounded-lg-4 rounded-3 overflow-hidden image_hight_auto" style="height: 345px;">
                                 <img class="h-100 w-100" loading="lazy" src="assets/images/e-gallery2.png"
                                     alt="gallery2">
                             </div>
                         </div>
                         <div class="col-lg-5 col-md-6 col-12">
-                            <div class="rounded-4 overflow-hidden" style="height: 345px;">
+                            <div class="rounded-lg-4 rounded-3 overflow-hidden image_hight_auto" style="height: 345px;">
                                 <img class="h-100 w-100" loading="lazy" src="assets/images/e-gallery3.png"
                                     alt="gallery3">
                             </div>
                         </div>
                         <div class="col-lg-7 col-md-6 col-12">
-                            <div class="rounded-4 overflow-hidden" style="height: 345px;">
+                            <div class="rounded-lg-4 rounded-3 overflow-hidden image_hight_auto" style="height: 345px;">
                                 <img class="h-100 w-100" loading="lazy" src="assets/images/e-gallery4.png"
                                     alt="gallery4">
                             </div>
@@ -149,7 +149,8 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-4">
-                    <div class="card px-3 py-4 rounded-4 mb-4"
+                    <div class="location_area">
+                        <div class="card px-3 py-4 rounded-4 mb-4"
                         style="box-shadow: 0px 0px 1px 0px #0000005E; border: 1px solid  #E5E5EA; ">
                         <h1 class="fm-forum fw-normal fs-5 text-dark pb-3" style="border-bottom:  1px solid #9CB31A;">
                             Location</h1>
@@ -171,16 +172,17 @@
                             Need Help?</h1>
                         <div class="d-flex py-3  justify-content-start align-items-center gap-2">
                             <img style="height: 24px; width: 24px;" src="assets/images/call.svg" alt="Location">
-                            <span class=" fm-lato fs-6 " style="color: #2D1817;">214-484-9664</span>
+                            <a href="tel:214-484-9664" class=" fm-lato lg-4 rounded-3s-6 contact_text image_hight_auto " style="color: #2D1817;">214-484-9664</a>
                         </div>
                         <div class="d-flex  justify-content-start align-items-center gap-2">
-                            <img style="height: 24px; width: 24px;" src="assets/images/messageIcon.svg" alt="Location">
-                            <span class=" fm-lato fs-6 " style="color: #2D1817;">support@hingesfurniture.com</span>
+                            <img style="height: 24px; width: 24px;" src="assets/images/email.svg" alt="Location">
+                            <a href="mailto:support@hingesfurniture.com" class=" fm-lato lg-4 rounded-3s-6 contact_text image_hight_auto " style="color: #2D1817;">support@hingesfurniture.com</a>
                         </div>
                         <button class="btn text-dark rounded-3  fw-medium fs-6 w-100 mt-4"
                             style="background: #F7F7F7; padding: 14px 0;">
                             Contact Support
                         </button>
+                    </div>
                     </div>
                 </div>
             </div>
