--- a/events&Promotions.html
+++ b/events&Promotions.html
@@ -91,7 +91,7 @@
             <h1 class="fm-forum lh-base fw-normal fs-2 mt-4 text-dark mb-4 text-center">Current Promotions</h1>
             <div class="d-flex justify-content-between align-items-stretch gap-0 flex-md-row flex-column">
                 <a href="#" class="w-md-50 d-block position-relative">
-                    <img loading="lazy" src="assets/images/livingroom1.png" alt="Living Room">
+                    <img loading="lazy" class="h-100 w-100" src="assets/images/livingroom1.png" alt="Living Room">
                     <div class="position-absolute" style="bottom: 33px  ; left: 33px;">
                         <h1 class="text-white fm-forum fs-2 fw-normal mb-0 text-start">Living Room Collection</h1>
                         <p class="fm-lato mb-0 fw-normal fs-6 text-start text-white">Timeless elegance for city living
@@ -99,7 +99,7 @@
                     </div>
                 </a>
                 <a href="#" class="w-md-50 d-block position-relative">
-                    <img loading="lazy" src="assets/images/livingroom2.png" alt="Living Room">
+                    <img loading="lazy" class="h-100 w-100" src="assets/images/livingroom2.png" alt="Living Room">
                     <div class="position-absolute" style="bottom: 33px  ; left: 33px;">
                         <h1 class="text-white fm-forum fs-2 fw-normal mb-0 text-start">Living Room Collection</h1>
                         <p class="fm-lato mb-0 fw-normal fs-6 text-start text-white">Warmth meets contemporary design
@@ -192,7 +192,7 @@
                 class="d-flex mt-2 mb-1 justify-content-center rounded-pill bg-white align-items-center subscribearea gap-0">
                 <input type="text" class="w-100 h-100 py-2 px-3 border-0 rounded-start-pill"
                     placeholder="Enter your email">
-                <button class="text-white rounded-end-pill flex-shrink-0 p-3">Subsribe</button>
+                <button class="text-white rounded-end-pill flex-shrink-0 p-3">Subscribe</button>
             </div>
         </div>
     </section>
