--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 Shop Now
             </button>
             <div class="row g-4 ">
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <div class="rounded-3 overflow-hidden" style="height:229px ;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/livingRoom.png" alt="Living Room">
                     </div>
@@ -120,7 +120,7 @@
                     <p class="fm-lato fw-normal fs-14 lh-base text-black-500">Create a welcoming and stylish living
                         space with our collection of living room furniture.</p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <div class="rounded-3 overflow-hidden" style="height:229px ;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/diningRoom.png" alt="Dining Room">
                     </div>
@@ -128,7 +128,7 @@
                     <p class="fm-lato fw-normal fs-14 lh-base text-black-500">Discover our range of stylish dining
                         tables, chairs, and sideboards for an elegant dining experience.</p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <div class="rounded-3 overflow-hidden" style="height:229px ;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/bedRoom.png" alt="Bed Room">
                     </div>
@@ -144,8 +144,8 @@
     <!-- =====================Modern Living start======================= -->
     <section class="py-5 mb-5" style="background: #2D18170A;">
         <div class="container">
-            <div class="row g-lg-5 g-4">
-                <div class="col-xl-8 col-lg-7">
+            <div class="row  g-4">
+                <div class="col-xl-7 col-lg-6">
                     <div class="h-100 w-100 pe-lg-5 d-flex gap-2 justify-content-center align-items-start flex-column">
                         <h1 class="fw-normal fs-2 fm-forum text-dark">Modern living with timeless designs</h1>
                         <p class="fw-normal fs-6 fm-lato text-dark">Elevate your living space into a haven of modern
@@ -156,10 +156,12 @@
                         </button>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-5">
-                    <div class="w-100 rounded-3 overflow-hidden" style="height: 472px;">
-                        <img class="w-100 h-100" loading="lazy" src="assets/images/modernLiving.png"
-                            alt="Modern Living">
+                <div class="col-xl-5 col-lg-6">
+                    <div class="d-flex justify-content-lg-end justify-content-center w-100">
+                        <div class="w-100 rounded-3 overflow-hidden image_hight_auto" style="height: 472px; max-width: 466px;">
+                            <img class="w-100 h-100 image_hight_auto" loading="lazy" src="assets/images/modernLiving.png"
+                                alt="Modern Living">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -171,14 +173,16 @@
     <!-- =====================Restful Retreat start======================= -->
     <section class="py-5" style="background: #2D18170A;">
         <div class="container">
-            <div class="row g-lg-5 g-4">
-                <div class="col-xl-4 col-lg-5">
-                    <div class="w-100 rounded-3 overflow-hidden" style="height: 472px;">
-                        <img class="w-100 h-100" loading="lazy" src="assets/images/restfullRetreat.png"
-                            alt="Modern Living">
+            <div class="row  g-4">
+                <div class="col-xl-5 col-lg-6">
+                      <div class="d-flex justify-content-lg-start justify-content-center w-100">
+                        <div class="w-100 rounded-3 overflow-hidden image_hight_auto" style="height: 472px; max-width: 466px;">
+                            <img class="w-100 h-100 image_hight_auto" loading="lazy" src="assets/images/restfullRetreat.png"
+                                alt="Restful Retreat">
+                        </div>
                     </div>
                 </div>
-                <div class="col-xl-8 col-lg-7">
+                <div class="col-xl-7 col-lg-6">
                     <div class="h-100 w-100 ps-lg-5 d-flex gap-2 justify-content-center align-items-start flex-column">
                         <h1 class="fw-normal fs-2 fm-forum text-dark">Restful Retreat</h1>
                         <p class="fw-normal fs-6 fm-lato text-dark">Create your perfect retreat with bedroom furniture
@@ -200,34 +204,34 @@
             <h1 class="fs-2 fw-normal text-dark  fm-forum lh-base text-center">Our Furniture Gallery</h1>
             <p class="fw-normal fs-6 fm-lato text-dark mb-5 lh-base text-center">Explore Our Gallery of Inspiring
                 Designs</p>
-            <div class="row g-4">
+            <div class="row g-3">
                 <div class="col-lg-4 col-xl-3 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 330px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/gallery1.png" alt="Gallery Image 1">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-3 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 330px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/gallery2.png" alt="Gallery Image 2">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-6 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 330px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/gallery3.png" alt="Gallery Image 3">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-6 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 330px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/gallery4.png" alt="Gallery Image 4">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-3 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 330px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/gallery5.png" alt="Gallery Image 4">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-3 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 330px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/gallery6.png" alt="Gallery Image 4">
                     </div>
                 </div>
