--- a/lookbook.html
+++ b/lookbook.html
@@ -96,52 +96,52 @@
         <div class="container">
             <div class="row g-4">
                 <div class="col-lg-4 col-xl-5 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 374px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 374px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook1.png" alt="Gallery Image 1">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-4 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 374px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 374px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook2.png" alt="Gallery Image 2">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-3 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 374px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 374px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook3.png" alt="Gallery Image 3">
                     </div>
                 </div>
                 <div class="col-lg-6 col-xl-6 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 374px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 374px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook4.png" alt="Gallery Image 4">
                     </div>
                 </div>
                 <div class="col-lg-6 col-xl-6 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 374px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 374px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook5.png" alt="Gallery Image 4">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-5 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 374px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 374px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook6.png" alt="Gallery Image 1">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-4 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 374px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 374px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook7.png" alt="Gallery Image 2">
                     </div>
                 </div>
                 <div class="col-lg-4 col-xl-3 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 374px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 374px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook8.png" alt="Gallery Image 3">
                     </div>
                 </div>
                 <div class="col-lg-6 col-xl-6 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 374px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 374px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook9.png" alt="Gallery Image 4">
                     </div>
                 </div>
                 <div class="col-lg-6 col-xl-6 col-md-6">
-                    <div class="rounded-3 overflow-hidden" style="height: 374px;">
+                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height: 374px;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/lookbook10.png" alt="Gallery Image 4">
                     </div>
                 </div>
@@ -167,21 +167,21 @@
             <h1 class="fs-4 fw-normal text-dark mb-3 fm-forum lh-base text-center">More Collection</h1>
             <p class="fw-normal fs-6 fm-lato text-dark mb-4 lh-base text-center">Explore other curated looks </p>
             <div class="row g-4 mt-1">
-                <div class="col-lg-4">
-                    <div class="rounded-3 overflow-hidden" style="height:229px ;">
+                <div class="col-lg-4 col-md-6">
+                    <div class="rounded-3 overflow-hidden image_hight_auto" style="height:229px ;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/livingRoom.png" alt="Living Room">
                     </div>
                     <h1 class="fm-lato fw-medium fs-6 text-dark mt-3 mb-2">Living Room</h1>
                     <p class="fm-lato fw-normal fs-14 lh-base text-black-500">Create a welcoming and stylish living space with our collection of living room furniture.</p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <div class="rounded-3 overflow-hidden" style="height:229px ;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/diningRoom.png" alt="Dining Room">
                     </div>
                     <h1 class="fm-lato fw-medium fs-6 text-dark mt-3 mb-2">Dining Room</h1>
                     <p class="fm-lato fw-normal fs-14 lh-base text-black-500">Discover our range of stylish dining tables, chairs, and sideboards for an elegant dining experience.</p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <div class="rounded-3 overflow-hidden" style="height:229px ;">
                         <img class="w-100 h-100" loading="lazy" src="assets/images/bedRoom.png" alt="Bed Room">
                     </div>
