--- a/tradeshows.html
+++ b/tradeshows.html
@@ -41,8 +41,8 @@
                     <img src="assets/images/logo.svg" alt="Logo">
                 </a>
                 <!-- navigation bar -->
-                 <nav class="navlink_area">
-                     <ul class="d-flex justify-content-center align-items-center flex-lg-row flex-column gap-4">
+                <nav class="navlink_area">
+                    <ul class="d-flex justify-content-center align-items-center flex-lg-row flex-column gap-4">
                         <li><a href="lookbook.html" class="navlink">At A Glance</a></li>
                         <li><a href="events&Promotions.html" class="navlink">Events & Promotions</a></li>
                         <li><a href="tradeshows.html" class="navlink">TRADESHOWS</a></li>
@@ -80,33 +80,32 @@
         <div class="container">
             <div style="padding: 250px 0;">
                 <h1 class="display-2 fw-normal text-white fm-forum text-center mb-0">Trade Shows</h1>
-                <p class="text-center fs-6 text-white fw-normal mt-0">Experience our exclusive furniture collections.</p>
+                <p class="text-center fs-6 text-white fw-normal mt-0">Experience our exclusive furniture collections.
+                </p>
             </div>
         </div>
     </section>
     <!-- =======================hero section end======================= -->
 
 
-     <!--====================Upcoming Trade Show start====================  -->
+    <!--====================Upcoming Trade Show start====================  -->
     <section class="py-5">
-        <div class="">
-            <h1
-                class="fs-2 fw-normal text-dark fm-forum lh-base text-center">Upcoming Trade Shows</h1>
-                <p class="fm-lato fw-normal fs-6 mb-5 text-center text-dark">Stop by to explore our latest collections and experience the quality firsthand.</p>
-            <div class="container">
-                <div class="d-flex justify-content-center align-items-center gap-sm-4 gap-1 px-2">
-                    <div class="upcommingTradeLogoBox pt-2" style="max-width: 209px;">
-                        <img class="mb-1" src="assets/images/hPMKT_Logo.png" alt="">
-                        <p class="fw-normal fs-6 fm-lato text-dark lh-base text-center pt-4">Oct 25 - 29th, 2025 <br>
-                            Plaza Suites 1-517</p>
-                    </div>
-                    <div class="separatorBorder"></div>
-                    <div class="upcommingTradeLogoBox" style="max-width: 245px;">
-                        <img src="assets/images/dallasMarketLogo.png" alt="">
-                        <p class="fw-normal fs-6 fm-lato text-dark lh-base text-center">Jan 07 – 13, 2026 <br>
-                            WTC 6262 <br>
-                            Dallas Market Center</p>
-                    </div>
+        <div class="container">
+            <h1 class="fs-2 fw-normal text-dark fm-forum lh-base text-center">Upcoming Trade Shows</h1>
+            <p class="fm-lato fw-normal fs-6 mb-5 text-center text-dark">Stop by to explore our latest collections and
+                experience the quality firsthand.</p>
+            <div class="d-flex justify-content-center align-items-center gap-sm-4 gap-1 px-2">
+                <div class="upcommingTradeLogoBox pt-2" style="max-width: 209px;">
+                    <img class="mb-1" src="assets/images/hPMKT_Logo.png" alt="">
+                    <p class="fw-normal fs-6 fm-lato text-dark lh-base text-center pt-4">Oct 25 - 29th, 2025 <br>
+                        Plaza Suites 1-517</p>
+                </div>
+                <div class="separatorBorder"></div>
+                <div class="upcommingTradeLogoBox" style="max-width: 245px;">
+                    <img src="assets/images/dallasMarketLogo.png" alt="">
+                    <p class="fw-normal fs-6 fm-lato text-dark lh-base text-center">Jan 07 – 13, 2026 <br>
+                        WTC 6262 <br>
+                        Dallas Market Center</p>
                 </div>
             </div>
         </div>
@@ -122,11 +121,12 @@
                     <img src="assets/images/logo.svg" alt="Footer Logo">
                 </div>
             </div>
-           <div class="footerLinks d-flex justify-content-center align-items-center gap-md-5 gap-3 mt-5 flex-wrap">
+            <div class="footerLinks d-flex justify-content-center align-items-center gap-md-5 gap-3 mt-5 flex-wrap">
                 <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">How to Buy</a>
                 <a href="tradeshows.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Trade Shows</a>
                 <a href="aboutUs.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">About Us</a>
-                <a href="events&Promotions.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Events & Promotions</a>
+                <a href="events&Promotions.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Events &
+                    Promotions</a>
                 <a href="contactUs.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Contact Us</a>
             </div>
             <!-- copywrite start -->
