--- a/terms&Conditions.html
+++ b/terms&Conditions.html
@@ -46,7 +46,7 @@
                         <li><a href="lookbook.html" class="navlink">At A Glance</a></li>
                         <li><a href="events&Promotions.html" class="navlink">Events & Promotions</a></li>
                         <li><a href="tradeshows.html" class="navlink">TRADESHOWS</a></li>
-                        <li><a href="becomeACustomer.html" class="navlink">BECOME A CUSTOMER</a></li>
+                         <li><a target="_blank" href="https://www.hingesdesign.com/register" class="navlink">BECOME A CUSTOMER</a></li>
                     </ul>
                 </nav>
                 <div class="d-flex justify-content-end align-items-center gap-4">
