--- a/events&Promotions.html
+++ b/events&Promotions.html
@@ -51,7 +51,7 @@
                 </nav>
                 <div class="d-flex justify-content-end align-items-center gap-4">
                     <!-- sign in button -->
-                    <a href="#" class="signInBtn d-flex justify-content-end align-items-center gap-2">
+                    <a href="https://www.hingesdesign.com/?showLogin=true" target="_blank" class="signInBtn d-flex justify-content-end align-items-center gap-2">
                         <img class="flex-shrink-0 icon_w" src="assets/images/user.svg" alt="Icon">
                         <img class="flex-shrink-0 icon_b" src="assets/images/user_black_icon.svg" alt="Icon">
                         <span class="text-nowrap">SIGN IN</span>
