--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <!-- pre loader with logo end -->
     <!-- ======================header area start=================== -->
-    <section class="header py-3 position-fixed top-0 start-0 w-100">
+    <section class="header homeheader py-3 position-fixed top-0 start-0 w-100">
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
                 <!-- logo -->
@@ -278,7 +278,7 @@
                         <div class="elevated_space_image_box ps-md-5 pe-md-4">
                             <img class="img-fluid" src="assets/images/elevateSpace.png" alt="Elevate Your Space">
                         </div>
-                        <div class="comentator bg-white rounded-3 shadow-sm p-2 position-absolute d-flex justify-content-center align-items-center flex-column"
+                        <!-- <div class="comentator bg-white rounded-3 shadow-sm p-2 position-absolute d-flex justify-content-center align-items-center flex-column"
                             style=" left: 0;  top: 50px;">
                             <div class="d-flex justify-content-start gap-3 align-items-center">
                                 <img style="height: 58px; width: 58px;" src="assets/images/shipper_images.png"
@@ -290,7 +290,7 @@
                                         Craftsmanship</p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="effectmark d-none d-md-block position-absolute top-50  translate-middle-y"
                             style="left: 40px;">
                             <img src="assets/images/effect.svg" alt="">
