--- a/lookbook.html
+++ b/lookbook.html
@@ -33,7 +33,7 @@
     </div>
     <!-- pre loader with logo end -->
     <!-- ======================header area start=================== -->
-    <section class="header lookbookheader py-3 position-fixed top-0 start-0 w-100">
+    <section class="header lookbookheader py-3 position-absolute top-0 start-0 w-100">
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
                 <!-- logo -->
