--- a/tradeshows.html
+++ b/tradeshows.html
@@ -33,7 +33,7 @@
     </div>
     <!-- pre loader with logo end -->
     <!-- ======================header area start=================== -->
-    <section class="header py-3 position-fixed top-0 start-0 w-100">
+    <section class="header py-3 position-absolute top-0 start-0 w-100">
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
                 <!-- logo -->
@@ -112,6 +112,46 @@
     </section>
     <!--====================Upcoming Trade Show end====================  -->
 
+    <!-- =========================Past Event Gallery start====================== -->
+    <section class="pb-5">
+        <div class="container">
+            <h1 class="fs-2 fw-normal text-dark  fm-forum lh-base text-center">Past Event Gallery</h1>
+            <p class="fw-normal fs-6 fm-lato text-dark mb-5 lh-base text-center">Relive the memorable moments from our previous exhibitions and see the impact of our designs.</p>
+            <div class="row g-3">
+                <div class="col-lg-4 col-xl-3 col-md-6">
+                    <div class="rounded-4 overflow-hidden image_hight_auto" style="height: 330px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/image_small.png" alt="Gallery Image 1">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-xl-3 col-md-6">
+                    <div class="rounded-4 overflow-hidden image_hight_auto" style="height: 330px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/image_small.png" alt="Gallery Image 2">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-xl-6 col-md-6">
+                    <div class="rounded-4 overflow-hidden image_hight_auto" style="height: 330px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/image_big.png" alt="Gallery Image 3">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-xl-6 col-md-6">
+                    <div class="rounded-4 overflow-hidden image_hight_auto" style="height: 330px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/image_big.png" alt="Gallery Image 4">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-xl-3 col-md-6">
+                    <div class="rounded-4 overflow-hidden image_hight_auto" style="height: 330px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/image_small.png" alt="Gallery Image 4">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-xl-3 col-md-6">
+                    <div class="rounded-4 overflow-hidden image_hight_auto" style="height: 330px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/image_small.png" alt="Gallery Image 4">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =========================Past Event Gallery end====================== -->
 
     <!-- =====================footer start===================== -->
     <footer class="py-5" style="border-top: 1px solid  #E5E5EA">
